# mobile_sacn

./: .buildinfo  .clang-format  .gitignore  3rd_party.html  CMakeLists.txt  CMakePresets.json  CNAME  README.md  conanfile.txt  genindex.html  getting-started.html  index.html  objects.inv  package-lock.json  package.json  search.html  searchindex.js  tsconfig.app.json  tsconfig.node.json  vcpkg.json  vite.config.ts  wifi_hotspot.html
doc/: .buildinfo  .gitignore  3rd_party.html  3rd_party.py  3rd_party.rst  CMakeLists.txt  WRITING_DOCS.md  conf.py  documentation_options.js  genindex.html  getting-started.html  getting-started.md  getting-started.rst  index.html  index.md  index.rst  objects.inv  privacy_policy.html  privacy_policy.md  requirements.txt  search.html  searchindex.js  wifi_hotspot.html  wifi_hotspot.rst
doc/_ext/: sphinx-ext-button.py  sphinx-ext-sass.py
doc/_static/: documentation_options.js  msacn-doc.css
doc/_style/: style.scss
doc/licenses/: Qt-license.txt  etc_pal.spdx.json  etc_sacn.spdx.json  qt.spdx.json  winsparkle.txt  zlib.txt
doc/usage/: index.html  index.md  index.rst
doc/usage/chancheck/: index.html  index.md  index.rst
doc/usage/control/: index.html  index.md  index.rst
doc/usage/view_levels/: index.html  index.md  index.rst
install/: CMakeLists.txt  LICENSE.html  LICENSE.rtf
install/Darwin/: CMakeLists.txt
install/Linux/: CMakeLists.txt
install/Windows/: CMakeLists.txt
mobile_sacn_webui/: .eslintignore  .gitignore  CMakeLists.txt  config-overrides.js  eslint.config.js  eslint.config.ts  gen_webui_qrc.cpp  i18next.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vite.config.ts.in
mobile_sacn_webui/@types/: i18next.d.ts
mobile_sacn_webui/public/: index.html  manifest.json  site.webmanifest
mobile_sacn_webui/public/locales/en/: channelCheck.json  common.json  receiveLevels.json  transmitLevels.json
mobile_sacn_webui/src/: App.scss  App.test.tsx  App.tsx  custom.d.ts  global.d.ts  index.d.ts  index.tsx  links.ts  main.tsx  routes.ts  setupTests.js
mobile_sacn_webui/src/assets/styles/: _bootstrap.scss  _colors.scss  _content.scss
mobile_sacn_webui/src/common/: AppContext.tsx  Context.ts  arrayFromGetterAndLength.ts  bigIntAbs.ts  cidColor.ts  clamp.ts  clampState.ts  colorForCID.ts  colorIterator.ts  constants.test.ts  constants.ts  effectName.ts  generate.ts  getBootstrapColor.ts  handleFieldChange.tsx  handleInputChange.ts  inRange.ts  iota.ts  levelDisplay.ts  localStorage.ts  setPageTitle.ts  stateObjectReducer.ts  translator.ts  unique.ts  useSession.ts  useWebsocket.ts  wsUrl.ts
mobile_sacn_webui/src/common/components/: ConnectButton.scss  ConnectButton.tsx  Connecting.tsx  Flashes.tsx  Jumbotron.scss  Jumbotron.tsx  LevelBar.scss  LevelBar.tsx  LevelDisplay.scss  LevelFader.scss  (+4 more)
mobile_sacn_webui/src/errors/: 404.tsx
mobile_sacn_webui/src/front/: FrontController.tsx  FrontPage.tsx  FrontTitle.tsx  SettingsPage.tsx  ThirdPartyPage.scss  ThirdPartyPage.tsx
mobile_sacn_webui/src/main/: Navbar.scss  Navbar.tsx
mobile_sacn_webui/src/receive/: ReceiveCommon.tsx  ReceiveController.tsx  ReceiveTitle.tsx
mobile_sacn_webui/src/transmit/: EffectConfig.tsx  TransmitCommon.tsx  TransmitConfig.scss  TransmitConfig.tsx  TransmitController.tsx  TransmitTitle.tsx
mobilesacn/libmobilesacn/: Application.cpp  Application.h  CMakeLists.txt  Caffeine.cpp  Caffeine.h  Caffeine_Linux.cpp  Caffeine_Other.cpp  Caffeine_Windows.cpp  ClientSettings.cpp  ClientSettings.h  CrowLogHandler.cpp  CrowLogHandler.h  EtcPalLogHandler.cpp  EtcPalLogHandler.h  Exception.h  HandlerFactory.cpp  HandlerFactory.h  HttpServer.cpp  HttpServer.h  SacnCidGenerator.cpp  SacnCidGenerator.h  SacnSettings.h  Settings.h  util.h
mobilesacn/libmobilesacn/handler/: BaseHandler.cpp  BaseHandler.h  ChanCheck.cpp  ChanCheck.h  MergeReceiver.cpp  MergeReceiver.h  ReceiveLevels.cpp  ReceiveLevels.h  SourceDetector.cpp  SourceDetector.h  TransmitHandler.cpp  TransmitHandler.h  TransmitLevels.cpp  TransmitLevels.h
mobilesacn/libmobilesacn/rpc/: ChanCheck.cpp  ChanCheck.h  ReceiveLevels.cpp  ReceiveLevels.h  RpcHandler.cpp  SubscribableMergeReceiver.cpp  SubscribableMergeReceiver.h  SubscribableNotifyHandler.h  SubscribableSourceDetector.cpp  TransmitHandler.cpp  TransmitLevels.cpp  TransmitLevels.h
mobilesacn/mobilesacn/: CMakeLists.txt  ClientTableModel.cpp  ClientTableModel.h  LogViewer.cpp  LogViewer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NetIntModel.cpp  NetIntModel.h  QrCode.cpp  QrCode.h  SentryLogSink.h  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  Updater.cpp  Updater.h  log_files.cpp  log_files.h  main.cpp  mobilesacn.rc
mobilesacn/mobilesacn/updater/: Release.h  UpdateDialog.cpp  UpdateDialog.h  Updater.cpp  Updater.h  preferred_package.cpp  preferred_package.h  preferred_package_Linux.cpp  preferred_package_Windows.cpp  updater.h  updater_none.cpp
proto/: CMakeLists.txt  chan_check.proto  common.proto  control.proto  effect.proto  view_levels.proto
src/libmobilesacn/: Application.cpp  CMakeLists.txt  CrowLogHandler.cpp  EtcPalLogHandler.cpp  HttpServer.cpp  SacnCidGenerator.cpp  SacnMerger.cpp  sacn.cpp
src/libmobilesacn/fx/: Blink.cpp  CMakeLists.txt  Effect.cpp  EffectFactory.cpp
src/libmobilesacn/rpc/: CMakeLists.txt  ChanCheck.cpp  Control.cpp  ReceiveLevels.cpp  RpcHandler.cpp  SubscribableMergeReceiver.cpp  SubscribableNotifyHandler.cpp  SubscribableSourceDetector.cpp  TransmitHandler.cpp  TransmitLevels.cpp  ViewLevels.cpp
src/mobilesacn/: CMakeLists.txt  LogViewer.cpp  LogViewer.h  MainWindow.cpp  MainWindow.h  NetIntModel.cpp  NetIntModel.h  QrCode.cpp  QrCode.h  SentryLogSink.h  Settings.h  log_files.cpp  log_files.h  main.cpp  mobilesacn.rc
src/mobilesacn/updater/: CMakeLists.txt  updater_win.cpp
test/libmobilesacn/: CMakeLists.txt  CrowLogHandlerTest.cpp  EtcPalLogHandlerTest.cpp
test/libmobilesacn/fx/: BlinkTest.cpp  CMakeLists.txt
test/libmobilesacn/rpc/: CMakeLists.txt  ChanCheckTest.cpp  ControlTest.cpp  ViewLevelsTest.cpp
(+165 files in other folders)
