set(CPACK_GENERATOR "DEB;RPM;TGZ" PARENT_SCOPE)

include(GNUInstallDirs)
# .desktop file is filled in with configure-time info
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.desktop" "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.desktop")
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.desktop"
        DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/applications")

# App icon
install(FILES "${PROJECT_SOURCE_DIR}/resources/logo.svg"
        RENAME "${PROJECT_NAME}.svg"
        DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/scalable/apps")

# DEB
set(CPACK_DEBIAN_FILE_NAME "DEB-DEFAULT" PARENT_SCOPE)
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS On PARENT_SCOPE)
set(CPACK_DEBIAN_PACKAGE_SECTION "misc" PARENT_SCOPE)
set(CPACK_DEBIAN_PACKAGE_NAME "mobilesacn" PARENT_SCOPE)

# RPM
set(CPACK_RPM_PACKAGE_DESCRIPTION "${PROJECT_DESCRIPTION}" PARENT_SCOPE)
set(CPACK_RPM_PACKAGE_LICENSE "Apache-2.0" PARENT_SCOPE)
